--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "threejs-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://metalicmedical.com.br/3D",
   "dependencies": {
     "@react-three/drei": "^9.11.3",
     "@react-three/fiber": "^8.0.19",
